--- a/force-app/main/default/classes/SummitEventsFeed.cls
+++ b/force-app/main/default/classes/SummitEventsFeed.cls
@@ -8,7 +8,6 @@
 global with sharing class SummitEventsFeed {
 
     private static String feedType { get; set; }
-    private static final SummitEventsShared seaShared = new SummitEventsShared();
     private static Id recTypeId { get; set; }
     private static String namespace { get; set; }
 
@@ -283,35 +282,33 @@ global with sharing class SummitEventsFeed {
         eventQuery += ' WITH SECURITY_ENFORCED ';
         eventQuery += ' ORDER BY Instance_Start_Date__c, Instance_Start_Time__c ';
 
-        System.debug(eventQuery);
-
         List<Summit_Events_Instance__c> EventInstanceList = Database.query(eventQuery);
 
         Datetime regDateOpenDate = null;
         for (Summit_Events_Instance__c eventInstance : EventInstanceList) {
             regDateOpenDate = Datetime.now().addDays(-1);
             if (eventInstance.Event__r.Close_Event_Days_Before__c != null && eventInstance.Event__r.Close_Event_Days_Before__c != 0) {
-                regDateOpenDate = seaShared.adjustForTimeZone(Datetime.now(), eventInstance.Instance_Time_Zone__c);
+                regDateOpenDate = SummitEventsShared.adjustForTimeZone(Datetime.now(), eventInstance.Instance_Time_Zone__c);
                 regDateOpenDate = regDateOpenDate.addDays((Integer.valueOf(eventInstance.Event__r.Close_Event_Days_Before__c) + 1));
             }
             eventItem evt = new eventItem();
             evt.ID = eventInstance.Id;
 
             if (eventInstance.Event__r.Event_Name__c != null) {
-                evt.title = seaShared.removeHTMLandEscape(eventInstance.Event__r.Event_Name__c, true);
-                evt.title_event = seaShared.removeHTMLandEscape(eventInstance.Event__r.Event_Name__c, true);
+                evt.title = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Event_Name__c, true);
+                evt.title_event = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Event_Name__c, true);
             } else {
-                evt.title = seaShared.removeHTMLandEscape(eventInstance.Event__r.Name, true);
-                evt.title_event = seaShared.removeHTMLandEscape(eventInstance.Event__r.Name, true);
+                evt.title = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Name, true);
+                evt.title_event = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Name, true);
             }
 
             if (String.isNotBlank(eventInstance.Instance_Title__c)) {
-                evt.title += ' - ' + seaShared.removeHTMLandEscape(eventInstance.Instance_Title__c, true);
-                evt.title_instance = seaShared.removeHTMLandEscape(eventInstance.Instance_Title__c, true);
+                evt.title += ' - ' + SummitEventsShared.removeHTMLandEscape(eventInstance.Instance_Title__c, true);
+                evt.title_instance = SummitEventsShared.removeHTMLandEscape(eventInstance.Instance_Title__c, true);
             }
 
             if (String.isNotBlank(eventInstance.Instance_Short_Description__c)) {
-                evt.instanceDesc = seaShared.removeHTMLandEscape(eventInstance.Instance_Short_Description__c, true);
+                evt.instanceDesc = SummitEventsShared.removeHTMLandEscape(eventInstance.Instance_Short_Description__c, true);
             } else {
                 evt.instanceDesc = '';
             }
@@ -323,9 +320,9 @@ global with sharing class SummitEventsFeed {
 //            }
 
             if (String.isNotBlank(eventInstance.Feed_Registration_Button_Text_Override__c)) {
-                evt.feedButtonText = seaShared.removeHTMLandEscape(eventInstance.Feed_Registration_Button_Text_Override__c, true);
+                evt.feedButtonText = SummitEventsShared.removeHTMLandEscape(eventInstance.Feed_Registration_Button_Text_Override__c, true);
             } else if (String.isNotBlank(eventInstance.Event__r.Feed_Registration_Button_Text__c)) {
-                evt.feedButtonText = seaShared.removeHTMLandEscape(eventInstance.Event__r.Feed_Registration_Button_Text__c, true);
+                evt.feedButtonText = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Feed_Registration_Button_Text__c, true);
             } else {
                 evt.feedButtonText = 'Register';
             }
@@ -335,7 +332,7 @@ global with sharing class SummitEventsFeed {
             }
 
             if (String.isNotBlank(eventInstance.Location_Type_Override__c)) {
-                evt.locationType = seaShared.removeHTMLandEscape(eventInstance.Location_Type_Override__c, true);
+                evt.locationType = SummitEventsShared.removeHTMLandEscape(eventInstance.Location_Type_Override__c, true);
             } else if (String.isNotBlank(eventInstance.Event__r.Location_Type__c)) {
                 evt.locationType = eventInstance.Event__r.Location_Type__c;
             } else {
@@ -355,7 +352,7 @@ global with sharing class SummitEventsFeed {
             }
 
             if (String.isNotBlank(eventInstance.Event__r.Event_Short_Listing_Description__c)) {
-                evt.description = seaShared.removeHTMLandEscape(eventInstance.Event__r.Event_Short_Listing_Description__c, true);
+                evt.description = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Event_Short_Listing_Description__c, true);
             } else {
                 evt.description = '';
             }
@@ -379,18 +376,18 @@ global with sharing class SummitEventsFeed {
             }
 
             if (eventInstance.Instance_Start_Date__c != null) {
-                evt.start = seaShared.convertDateToDatetime(eventInstance.Instance_Start_Date__c, eventInstance.Instance_Start_Time__c, '');
+                evt.start = SummitEventsShared.convertDateToDatetime(eventInstance.Instance_Start_Date__c, eventInstance.Instance_Start_Time__c, '');
 
             }
             if (eventInstance.Instance_End_Date__c != null) {
-                evt.endDate = seaShared.convertDateToDatetime(eventInstance.Instance_End_Date__c, eventInstance.Instance_End_Time__c, '');
+                evt.endDate = SummitEventsShared.convertDateToDatetime(eventInstance.Instance_End_Date__c, eventInstance.Instance_End_Time__c, '');
             }
 
             if (String.isNotBlank(eventInstance.Event__r.Location_Title__c) || String.isNotBlank(eventInstance.Location_Title_Override__c)) {
                 if (String.isNotBlank(eventInstance.Location_Title_Override__c)) {
-                    evt.locationTitle = seaShared.removeHTMLandEscape(eventInstance.Location_Title_Override__c, true);
+                    evt.locationTitle = SummitEventsShared.removeHTMLandEscape(eventInstance.Location_Title_Override__c, true);
                 } else {
-                    evt.locationTitle = seaShared.removeHTMLandEscape(eventInstance.Event__r.Location_Title__c, true);
+                    evt.locationTitle = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Location_Title__c, true);
                 }
             } else {
                 evt.locationTitle = '';
@@ -398,9 +395,9 @@ global with sharing class SummitEventsFeed {
 
             if (String.isNotBlank(eventInstance.Event__r.Location_Address__c) || !String.isBlank(eventInstance.Location_Address_Override__c)) {
                 if (String.isNotBlank(eventInstance.Location_Address_Override__c)) {
-                    evt.locationAddress = seaShared.removeHTMLandEscape(eventInstance.Location_Address_Override__c, true);
+                    evt.locationAddress = SummitEventsShared.removeHTMLandEscape(eventInstance.Location_Address_Override__c, true);
                 } else {
-                    evt.locationAddress = seaShared.removeHTMLandEscape(eventInstance.Event__r.Location_Address__c, true);
+                    evt.locationAddress = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Location_Address__c, true);
                 }
             } else {
                 evt.locationAddress = '';
@@ -408,15 +405,15 @@ global with sharing class SummitEventsFeed {
 
             if (String.isNotBlank(eventInstance.Event__r.Location_Map_Link__c) || String.isNotBlank(eventInstance.Location_Map_Link_Override__c)) {
                 if (!String.isBlank(eventInstance.Location_Map_Link_Override__c)) {
-                    evt.locationMapLink = seaShared.removeHTMLandEscape(eventInstance.Location_Map_Link_Override__c, false);
+                    evt.locationMapLink = SummitEventsShared.removeHTMLandEscape(eventInstance.Location_Map_Link_Override__c, false);
                 } else {
-                    evt.locationMapLink = seaShared.removeHTMLandEscape(eventInstance.Event__r.Location_Map_Link__c, false);
+                    evt.locationMapLink = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Location_Map_Link__c, false);
                 }
             } else {
                 evt.locationMapLink = '';
             }
 
-            if (seaShared.isEventClosed(eventInstance)) {
+            if (SummitEventsShared.isEventClosed(eventInstance)) {
                 evt.eventClosed = true;
                 evt.eventUrl = 'javascript:;';
                 evt.className = 'eventClosed';
@@ -427,9 +424,9 @@ global with sharing class SummitEventsFeed {
                 evt.eventClosed = false;
                 if (!String.isBlank(eventInstance.Event__r.Alternate_Registration_URL__c) || !String.isBlank(eventInstance.Alternate_Registration_URL_Override__c)) {
                     if (!String.isBlank(eventInstance.Alternate_Registration_URL_Override__c)) {
-                        evt.eventUrl = seaShared.removeHTMLandEscape(eventInstance.Alternate_Registration_URL_Override__c, false);
+                        evt.eventUrl = SummitEventsShared.removeHTMLandEscape(eventInstance.Alternate_Registration_URL_Override__c, false);
                     } else {
-                        evt.eventUrl = seaShared.removeHTMLandEscape(eventInstance.Event__r.Alternate_Registration_URL__c, false);
+                        evt.eventUrl = SummitEventsShared.removeHTMLandEscape(eventInstance.Event__r.Alternate_Registration_URL__c, false);
                     }
 
                 } else {
