--- a/force-app/main/default/classes/SummitEventsCancelReviewController.cls
+++ b/force-app/main/default/classes/SummitEventsCancelReviewController.cls
@@ -4,9 +4,8 @@
 // Created by Thaddaeus Dahlberg on  5/1/2018.
 
 public with sharing class SummitEventsCancelReviewController {
-    public SummitEventsShared SEShared = new SummitEventsShared();
     public Summit_Events_Registration__c eventRegistration { get; set; }
-    public SummitEventsShared.SummitEventsInfo eventInformation { get; set; }
+    public SummitEventsInfo eventInformation { get; set; }
     public List<Summit_Events_Appointments__c> appointments { get; set; }
     public String templateSelected { get; set; }
     public Boolean eventOver { get; set; }
@@ -21,10 +20,10 @@ public with sharing class SummitEventsCancelReviewController {
         eventOver = false;
 
         if (!String.isBlank(eventParameter)) {
-            String decryptedParameter = SEShared.decryptString(eventParameter, false);
+            String decryptedParameter = SummitEventsShared.decryptString(eventParameter, false);
             if (String.isNotBlank(decryptedParameter)) {
                 try {
-                    eventInformation = (SummitEventsShared.SummitEventsInfo) JSON.deserialize(decryptedParameter, SummitEventsShared.SummitEventsInfo.class);
+                    eventInformation = (SummitEventsInfo) JSON.deserialize(decryptedParameter, SummitEventsInfo.class);
                 } catch (Exception e) {
                     System.debug(e.getMessage());
                 }
@@ -47,7 +46,7 @@ public with sharing class SummitEventsCancelReviewController {
 
                     if (eventRegistration != null) {
 
-                        templateSelected = SEShared.getTemplate(eventRegistration.Event__r.Template__c);
+                        templateSelected = SummitEventsShared.getTemplate(eventRegistration.Event__r.Template__c);
 
                         SummitEventsShared SEShared = new SummitEventsShared();
 
@@ -66,12 +65,12 @@ public with sharing class SummitEventsCancelReviewController {
                                 WITH SECURITY_ENFORCED
                         ];
 
-                        if (SEShared.convertDateToDatetime(eventRegistration.Event_Instance__r.Instance_End_Date__c, null, '') < SEShared.adjustForTimeZone(Datetime.now(), eventRegistration.Event_Instance__r.Instance_Time_Zone__c)) {
+                        if (SummitEventsShared.convertDateToDatetime(eventRegistration.Event_Instance__r.Instance_End_Date__c, null, '') < SummitEventsShared.adjustForTimeZone(Datetime.now(), eventRegistration.Event_Instance__r.Instance_Time_Zone__c)) {
                             eventOver = true;
                         }
 
                         if (eventInstance != null) {
-                            formattedNavDate = SEShared.navBreadcrumbBuilder(eventInstance);
+                            formattedNavDate = SummitEventsShared.navBreadcrumbBuilder(eventInstance);
                         }
                         eventNotFound = false;
                     }
